--- a/my-app/src/components/Navbar.css
+++ b/my-app/src/components/Navbar.css
@@ -26,3 +26,12 @@
 .nav-link li{
     list-style: none;
 }
+
+/* //For responsive */
+
+@media screen and (max-width: 600px){
+.li:nth-child(1){
+    display: none   ;
+}
+    
+}
